# zep

./: .all-contributorsrc  .clang-format  .ctags  .doxyfile  .gitignore  .travis.yml  .vimrc  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Info.plist  LICENSE  NOTES.md  README.md  TODO.md  appveyor.yml  build.bat  build.sh  build_all.bat  build_all.sh  codecov.yml  config.bat  config.sh  config_all.bat  config_all.sh  config_imgui.bat  config_imgui.sh  config_libonly.bat  config_mac.sh  config_qt.bat  config_qt.sh  config_qt_imgui.bat  deploy.bat  get_editor.bat  imgui.ini  imgui_dock.inl  imgui_orient.cpp  logger.conf  prebuild.bat  prebuild.sh  (+5 more)
.github/workflows/: builds.yml
.zep/: project.cfg
cmake/: all.cmake  clang++.cmake  config_app.h.cmake  copy_files.cmake  cpack_installer.cmake  g++.cmake  linux.cmake  mac.cmake  msvc.cmake  pc.cmake  zep-config.cmake.in
demo_imgui/: CMakeLists.txt  main.cpp
demo_qt/: CMakeLists.txt  app.exe.manifest  app.qrc  app.rc  common-qt.cpp  common-qt.h  list.cmake  main-qt.cpp  mainwindow.cpp  mainwindow.h  resource.h
demos/: CMakeLists.txt  demo_common.h
demos/cmake/: MacOSXBundleInfo.plist.in  demo_common.cmake
demos/demo_imgui/: CMakeLists.txt  janet_utils.cpp  main.cpp
demos/demo_imgui/clip/: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  clip_osx.mm  clip_win.cpp
demos/demo_imgui/clip/examples/: CMakeLists.txt  int_format.cpp
demos/demo_imgui/clip/tests/: CMakeLists.txt
demos/demo_imgui/dpi/: dpi.cpp  dpi.h
demos/demo_imgui/janet/: janet.c  janet.h
demos/demo_imgui/res/: AppIcon.icns
demos/demo_qt/: CMakeLists.txt  main-qt.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/html/: classvku_1_1_color_attachment_image.html  classvku_1_1_compute_pipeline_maker-members.html  classvku_1_1_compute_pipeline_maker.html  classvku_1_1_descriptor_set_maker-members.html  classvku_1_1_framework.html  functions.html  index.html  (+27 more)
examples/: CMakeLists.txt  README.md
examples/helloCompute/: helloCompute.cpp
examples/helloTriangle/: helloTriangle.frag  helloTriangle.vert
examples/pushConstants/: pushConstants.cpp  pushConstants.vert
examples/texture/: texture.cpp  texture.frag  texture.vert
examples/uniforms/: uniforms.cpp  uniforms.vert
extensions/: CMakeLists.txt
extensions/orca/: mode_orca.cpp  mode_orca.h  orca.cpp  orca.h  syntax_orca.cpp  syntax_orca.h  thread_utils.h  time_provider.cpp  time_provider.h  time_utils.h
extensions/orca/orca-c/: .clang-format  .gitignore  Makefile  README.md  base.h  cli_main.c  field.c  field.h  gbuffer.c  gbuffer.h  osc_out.c  osc_out.h  sim.c  sim.h  sysmisc.c  sysmisc.h  term_util.c  term_util.h  tool  tui_main.c  vmio.c  vmio.h
extensions/orca/orca-c/examples/: _midi.orca
extensions/repl/: mode_repl.cpp  mode_repl.h
icebox/: body.cpp  body.h  camera.cpp  camera.h  components.cpp  components.h  control.cpp  control.h  input.cpp  input.h  material.cpp  material.h  mesh.cpp  mesh.h  physics.cpp  physics.h  sound.cpp  sound.h
include/: zep.h
jorvik/: compile.cpp  compile.h  editor.cpp  editor.h  jorvik.cpp  jorvik.h  keywords.h  list.cmake  main.cpp  meta_tags.cpp  meta_tags.h  opus.cpp  opus.h  opus_asset_base.cpp  opus_asset_base.h  scene.cpp
m3rdparty/: config_assimp.bat  config_assimp.sh  config_flatbuffers.bat  list.cmake  m3rdparty.h
m3rdparty/cpptoml/: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cpptoml.doxygen.in
m3rdparty/cpptoml/cmake/: cpptomlConfig.cmake.in
m3rdparty/cpptoml/examples/: CMakeLists.txt  build_toml.cpp  conversions.cpp  parse.cpp  parse_stdin.cpp
m3rdparty/cpptoml/include/: cpptoml.h
m3rdparty/cpptoml/travis/: install_libcxx.sh
m3rdparty/tinydir/samples/: .gitignore  CMakeLists.txt  iterate_sample.c  list_to_file.c  random_access_sample.c
m3rdparty/tinydir/tests/: .gitignore  CMakeLists.txt  file_open_test.c  util.c  util.h  windows_unicode_test.c
m3rdparty/tinydir/tests/cbehave/: CMakeLists.txt  LICENSE  README.md  apr_ring.h  cbehave.c  cbehave.h
m3rdparty/tinydir/tests/cbehave/rlutil/: rlutil.h
scripts/: travis_install.sh  travis_script.sh  travis_success.sh
src/: CMakeLists.txt  buffer.cpp  buffer.h  commands.cpp  commands.h  display.cpp  display.h  editor.cpp  editor.h  filesystem.cpp  filesystem.h  gap_buffer.h  glyph_iterator.cpp  imgui.ini  indexer.cpp  keymap.cpp  line_widgets.cpp  list.cmake  mode.cpp  mode.h  mode_repl.cpp  mode_search.cpp  mode_search.h  mode_standard.cpp  mode_standard.h  mode_tree.cpp  mode_vim.cpp  mode_vim.h  range_markers.cpp  regress.cpp  scroller.cpp  scroller.h  splits.cpp  splits.h  syntax.cpp  syntax.h  syntax_glsl.cpp  syntax_glsl.h  syntax_markdown.cpp  syntax_orca.cpp  (+15 more)
src/imgui/: console_imgui.h  display_imgui.cpp  display_imgui.h  editor_imgui.cpp  editor_imgui.h
src/mcommon/: .gitignore  common_namespace.h  logger.h  threadpool.h  threadutils.h
src/mcommon/FileWatcher/: FileWatcher.cpp  FileWatcherWin32.cpp  SimpleDemo.cpp
src/mcommon/animation/: timer.cpp  timer.h
src/mcommon/file/: archive.cpp  archive.h  file.cpp  file.h  media.cpp  media.h  mfilesystem.h  path.cpp  path.h  tinydir.h
src/mcommon/filewatcher/: FileWatcherWin32.cpp
src/mcommon/math/: math.h  mathutils.cpp  mathutils.h  mathutils.test.cpp
src/mcommon/string/: murmur_hash.cpp  stringutils.cpp  stringutils.h
src/qt/: display_qt.cpp  display_qt.h  window_qt.cpp  window_qt.h  zepdisplay_qt.cpp  zepdisplay_qt.h  zepwidget_qt.cpp  zepwidget_qt.h
src/tests/: buffer.test.cpp  gap_buffer.test.cpp  longtext.tt  mode_standard.test.cpp  mode_vim.test.cpp  stringutils.test.cpp  syntax.test.cpp
src/utils/: file.cpp  file.h  gsl-lite.hpp  logger.h  math.h  stringutils.cpp  stringutils.h  threadutils.h  timer.cpp  timer.h
tests/: CMakeLists.txt  current.txt  list.cmake  main.cpp  required.txt  tabs.txt  test.lsp  two_by_two.orca  utf8.txt  utf8_line.txt
tests/googletest/googletest/src/: gtest-internal-inl.h  gtest-printers.cc
utils/: callback.cpp  callback.h  container_utils.h  list.cmake  logger.h  registrar.h  threadutils.h  utils.h
(+523 files in other folders)
